force-app/main/default/objects/Author_Reading__c/Author_Reading__c.object-meta.xml
<CustomObject>
    <description>An event where the author reads selected chapters from a new book which the attendees have the option of buying.</description>
    <label>Author Reading</label>
    <nameField>
        <label>Reading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Author Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>