force-app/main/default/objects/Author_Reading__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The book that the author will be reading from.</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Author Readings</relationshipLabel>
    <relationshipName>Author_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>