force-app/main/default/objects/Author_Reading__c/fields/Ends__c.field-meta.xml
<CustomField>
    <fullName>Ends__c</fullName>
    <label>Ends</label>
    <type>DateTime</type>
</CustomField>