force-app/main/default/objects/Author_Reading__c/fields/Virtual__c.field-meta.xml
<CustomField>
    <fullName>Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a virtual event.</description>
    <label>Virtual</label>
    <type>Checkbox</type>
</CustomField>